samples/_failures_safe/1761561371_256a6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c8fa60b.c: In function ‘main’:
./samples/SAFE/__tmp_4c8fa60b.c:176:9: error: expected expression at end of input
  176 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_4c8fa60b.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c8fa60b.c:176:9: error: expected declaration or statement at end of input
